# PitchRank

./: .env  .env.backup  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  ACTION-PLAN.md  ACTUAL_DATA_ANALYSIS.py  AGENTS.md  ARCHITECTURE.md  AUDIT_U14_MALE_AZ_RANKINGS.md  CLAUDE.md  COACH_DETECTION_SUMMARY.md  COMPONENT_DATA_FLOW_DIAGRAM.md  DASHBOARD_README.md  DEEP_DIVE_FINDINGS.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS.md  FULL-AUDIT-REPORT.md  FUZZY_MATCH_DASHBOARD.md  GAME_COUNT_DISCREPANCY_ANALYSIS.md  GITHUB_ACTIONS_DASHBOARD.md  GITHUB_ACTIONS_IMPORT_EXPLAINED.md  HEARTBEAT.md  ITERATIVE_SOS_ANALYSIS.md  MATCH_METHOD_GUIDE.md  NORMALIZATION_ANALYSIS.md  PARAMETER_TUNING_INVESTIGATION.md  POOLER_SETUP.md  POWER_SCORE_COMPRESSION_ANALYSIS.md  PREDICTION_VALIDATION_SUMMARY.md  PROJECT_FLOW.md  QUERY_INSTRUCTIONS.md  README.md  README_PITCHRANK_FRONTEND_DATA.md  RECOMMENDED_SOLUTION.md  REVIEW.md  SEO_SOCIAL_MEDIA_IMPLEMENTATION_SUMMARY.md  SETUP_CHECKLIST.md  SOCIAL_MEDIA_SETUP_GUIDE.md  (+118 more)
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.streamlit/: config.toml
brand/: assets.md  blog-topics.json  creative-kit.md  keyword-plan.md  learnings.md  positioning.md  stack.md  trend-topics.json  voice-profile.md
clawdbot/: COMPLETE_SETUP_GUIDE.md  MAC_MINI_SETUP.md  SKILL.md  SOUL.md  TOOLS.md  __init__.py  check_data_quality.py  cron-config.sh  runner.py  safety.py
config/: settings.py
content/: SOCIAL_TEMPLATES.md  priority-states-top10.md
credentials/: gsc-service-account.json
data/: debug_surfsports.html
design-mockups/: README.md  (+11 more)
(+2420 files in other folders)
