[project]
name = "pitchrank"
version = "2.0.0"
description = "Youth soccer ranking system with cross-age and cross-state support"
authors = [
    {name = "Dallas Heidt", email = "dallasheidt14@gmail.com"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

